Fixing single page rendering

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "strict": "off",
     "comma-dangle": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "max-params": "off"
   }
 }
