--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bin/spectacle-renderer.js",
     "precommit": "lint-staged",
     "preversion": "npm run lint && npm run test",
-    "test": "mocha 'test/**/*.spec.js'"
+    "test": "mocha 'test/**/*.spec.js' --timeout 10000"
   },
   "engines": {
     "node": ">=6.4.0"
@@ -17,15 +17,9 @@
     "type": "git",
     "url": "git+https://github.com/FormidableLabs/spectacle-renderer.git"
   },
-  "keywords": [
-    "spectacle",
-    "renderer"
-  ],
+  "keywords": ["spectacle", "renderer"],
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.js": ["prettier --write", "git add"]
   },
   "author": "Ken Wheeler",
   "license": "MIT",
