Convert params to options. Misc infrastructure improvements.

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
   "rules": {
     "strict": "off",
     "comma-dangle": "off",
-    "arrow-parens": "off",
-    "max-params": "off"
+    "arrow-parens": "off"
   }
 }
