--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
     "mocha": "^4.0.1",
+    "pify": "^3.0.0",
     "prettier": "^1.7.4",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0"
