--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bin/spectacle-renderer.js",
     "precommit": "lint-staged",
     "preversion": "npm run lint && npm run test",
-    "test": "mocha 'test/**/*.spec.js' --timeout 10000"
+    "test": "mocha \"test/**/*.spec.js\" --timeout 10000"
   },
   "engines": {
     "node": ">=6.4.0"
