Expose chromium executable path. (#5)
Big stuff:

* Change `createPDF` to options instead of params.
* Allow "bring your own executable" via `-c` flag for already installed chromium instances.

Minor: 

* Refactor lint stuff.
* Make test actions async

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,7 @@
-{
-  "extends": "formidable/configurations/es6-node",
-  "globals": {
-    "describe": true,
-    "after": true,
-    "it": true
-  },
-  "rules": {
-    "strict": "off",
-    "comma-dangle": "off",
-    "arrow-parens": "off",
-    "max-params": "off"
-  }
-}
+---
+extends:
+  - formidable/configurations/es6-node
+
+rules:
+  arrow-parens: off
+  no-extra-parens: off
