--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.2",
   "description": "Render Spectacle presentations with Headless Chrome",
   "bin": "bin/spectacle-renderer.js",
+  "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
     "start": "node bin/spectacle-renderer.js",
     "precommit": "lint-staged",
     "preversion": "npm run lint && npm run test",
-    "test": "mocha 'test/**/*.spec.js' --timeout 10000"
+    "test": "mocha \"test/**/*.spec.js\" --timeout 10000"
   },
   "engines": {
     "node": ">=6.4.0"
@@ -47,6 +48,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
     "mocha": "^4.0.1",
+    "pify": "^3.0.0",
     "prettier": "^1.7.4",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0"
